[FLINK-38896][runtime/rest] Introduce the /jobs/:jobid/rescales/summary endpoint in the REST API (#27892)
Co-authored-by: XComp <mpohl@confluent.io>
Co-authored-by: spuru9 <sinhapurushottam911@gmail.com>
Co-authored-by: mateczagany <czmate10@gmail.com>
(cherry picked from commit ed21db51baa427f91bbf975a3e45fe13f475ecb0)